WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
174419
Wrong radix used in Unicode Escape in invalid character error message
https://bugs.webkit.org/show_bug.cgi?id=174419
Summary
Wrong radix used in Unicode Escape in invalid character error message
Tooru Fujisawa [:arai]
Reported
2017-07-12 03:30:10 PDT
Steps to Reproduce: 1. open WebKit Nightly Build 10.1.1 (12603.2.4,
r219378
) 2. open Console 3. evaluate the following code eval("\uffee"); Actual result: get following error SyntaxError: Invalid character '\u65518' it's using decimal after \u Expected result: get the following error SyntaxError: Invalid character '\uffee' it should use hexadecimal after \u, I'm preparing a patch now
Attachments
Patch
(12.30 KB, patch)
2017-07-12 04:24 PDT
,
Tooru Fujisawa [:arai]
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tooru Fujisawa [:arai]
Comment 1
2017-07-12 04:24:50 PDT
Created
attachment 315228
[details]
Patch
Alex Christensen
Comment 2
2017-07-12 08:28:38 PDT
Comment on
attachment 315228
[details]
Patch Yep. Thanks!
WebKit Commit Bot
Comment 3
2017-07-12 08:57:18 PDT
Comment on
attachment 315228
[details]
Patch Clearing flags on attachment: 315228 Committed
r219396
: <
http://trac.webkit.org/changeset/219396
>
WebKit Commit Bot
Comment 4
2017-07-12 08:57:19 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug