Wrong radix used in Unicode Escape in invalid character error message https://bugs.webkit.org/show_bug.cgi?id=174419

Patch by Tooru Fujisawa [:arai] <arai.unmht@gmail.com> on 2017-07-12
Reviewed by Alex Christensen.

LayoutTests/imported/w3c:

* web-platform-tests/html/syntax/parsing-html-fragments/the-input-byte-stream-003-expected.txt:
* web-platform-tests/html/syntax/parsing-html-fragments/the-input-byte-stream-004-expected.txt:

Source/JavaScriptCore:

* parser/Lexer.cpp:
(JSC::Lexer<T>::invalidCharacterMessage):

LayoutTests:

* fast/loader/cache-encoding-expected.txt:
* http/tests/preload/preload-encoding-expected.txt:
* js/basic-strict-mode-expected.txt:
* js/kde/parse-expected.txt:
* loader/reload-subresource-when-type-changes-expected.txt:
* platform/ios/imported/w3c/web-platform-tests/html/syntax/parsing-html-fragments/the-input-byte-stream-003-expected.txt:
* platform/ios/imported/w3c/web-platform-tests/html/syntax/parsing-html-fragments/the-input-byte-stream-004-expected.txt:

Canonical link: https://commits.webkit.org/191237@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219396 268f45cc-cd09-0410-ab3c-d52691b4dbfc